avro for xapi statement
