# app/bindings/api/v0/swagger.json
@@ -272,7 +272,7 @@
         }
       }
     },
-    "Actor": {
+    "Agent": {
       "type": "object",
       "required": [
         "name"
@@ -354,6 +354,61 @@
         }
       }
     },
+    "Context": {
+      "type": "object",
+      "required": [
+        "contextActivities"
+      ],
+      "properties": {
+        "contextActivities": {
+          "type": "object",
+          "required": [
+            "parent"
+          ],
+          "properties": {
+            "parent": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Activity"
+              }
+            },
+            "registration": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "ActivityDefinition": {
+      "type": "object",
+      "required": [
+        "name",
+        "type"
+      ],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        }
+      }
+    },
+    "Activity": {
+      "type": "object",
+      "required": [
+        "id",
+        "definition"
+      ],
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "definition": {
+          "$ref": "#/definitions/ActivityDefinition"
+        }
+      }
+    },
     "Result": {
       "type": "object",
       "properties": {
@@ -384,7 +439,7 @@
           "description": "The unique identifier of the statement."
         },
         "actor": {
-          "$ref": "#/definitions/Actor",
+          "$ref": "#/definitions/Agent",
           "description": "The actor who performed the action described in the statement."
         },
         "verb": {
@@ -407,6 +462,11 @@
           "type": "string",
           "format": "date_time",
           "description": "The timestamp when the statement was made."
+        },
+        "stored": {
+          "type": "string",
+          "format": "date_time",
+          "description": "The timestamp when the statement was stored in LRS."
         },
         "attachments": {
           "type": "array",
